--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4MkB5sPTQtiWdozgGMGrWRc4Mw7C4X_U"
+  type="text/javascript"></script>
   </body>
 </html>
